Fix columns on firefox

--- a/src/components/previousOccupation/style.module.scss
+++ b/src/components/previousOccupation/style.module.scss
@@ -22,15 +22,8 @@
   }
 
   .cards {
-    -moz-column-count: 2;
-    -moz-column-gap: 3%;
-    -moz-column-width: 46%;
-    -webkit-column-count: 3;
-    -webkit-column-gap: 3%;
-    -webkit-column-width: 46%;
-    column-count: 2;
+    columns: 2;
     column-gap: 3%;
-    column-width: 46%;
     padding: 0 20px 0 20px;
     margin-top: 50px;
 
@@ -107,9 +100,7 @@
 
   @media screen and (max-width: 850px) {
     .cards {
-      -moz-column-count: 1;
-      -webkit-column-count: 1;
-      column-count: 1;
+      columns: 1;
 
       .card {
         width: 100%;
